Dodano endpointy POST, DELETE, PUT