@@ -1,13 +1,16 @@
 package com.example.demo.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import com.example.demo.DTO.SoftwareEngineerDTO;
+import com.example.demo.DTO.SoftwareEngineer.SoftwareEngineerCreateDTO;
+import com.example.demo.DTO.SoftwareEngineer.SoftwareEngineerDTO;
 import com.example.demo.mapper.SoftwareEngineerDTOMapper;
+import com.example.demo.model.SoftwareEngineer;
 import com.example.demo.repository.SoftwareEngineerRepository;
+
+import jakarta.persistence.EntityNotFoundException;
 
 @Service
 public class SoftwareEngineerService {
@@ -25,7 +28,34 @@ public class SoftwareEngineerService {
         return softwareEngineerRepository.findAll()
                 .stream()
                 .map(softwareEngineerDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public SoftwareEngineerDTO getSoftwareEngineerById(Integer id) {
+        return softwareEngineerRepository.findById(id).map(softwareEngineerDTOMapper)
+                .orElseThrow(() -> new EntityNotFoundException("Nie znaleziono inżyniera z id " + id));
+    }
+
+    public void createEngineer(SoftwareEngineerCreateDTO dto) {
+        SoftwareEngineer engineer = new SoftwareEngineer();
+        engineer.setName(dto.name());
+        engineer.setTechStack(dto.techStack());
+        softwareEngineerRepository.save(engineer);
+    }
+
+    public void deleteEngineer(Integer id) {
+        if (!softwareEngineerRepository.existsById(id)) {
+            throw new EntityNotFoundException("Nie znaleziono inżyniera z id " + id);
+        }
+        softwareEngineerRepository.deleteById(id);
+    }
+
+    public void updateEngineer(Integer id, SoftwareEngineerCreateDTO dto) {
+        SoftwareEngineer engineer = softwareEngineerRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Nie znaleziono inżyniera z id " + id));
+        engineer.setName(dto.name());
+        engineer.setTechStack(dto.techStack());
+        softwareEngineerRepository.save(engineer);
     }
 
 }
